# ResumeAnalyst

./: .gitignore  pyproject.toml  test.py  test_markitdown_postprocess.py
.omx/: metrics.json
.omx/logs/: omx-2026-04-19.jsonl  tmux-hook-2026-04-19.jsonl  turns-2026-04-19.jsonl
.omx/state/: current-task-baseline.json  session.json  subagent-tracking.json  tmux-hook-state.json
.omx/state/sessions/019da4ae-07f3-7fc3-8465-cdc22d355d06/: hud-state.json  notify-hook-state.json
app/: config.py  main.py
app/routes/: web.py
app/schemas/: analysis.py  resume.py
app/services/: diagnosis_engine.py  markdown_cleaner.py  markdown_normalizer.py  markdown_renderer.py  pdf_text_extractor.py  resume_markdown_pipeline.py  resume_section_parser.py  rewrite_guidance.py  scoring.py
app/static/: styles.css
app/templates/: base.html  index.html  result.html
docs/superpowers/specs/: 2026-04-19-resume-loading-and-markdown-ui-design.md  2026-04-19-resume-markdown-pipeline-design.md
tests/: conftest.py  test_app_smoke.py  test_diagnosis_engine.py  test_error_handling.py  test_markdown_normalizer.py  test_pdf_text_extractor.py  test_resume_section_parser.py  test_runtime_paths.py  test_scoring.py  test_upload_validation.py  test_web_flow.py
