[project]
name = "resume-diagnosis-mvp"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "jinja2>=3.1,<4.0",
  "markdown>=3.7,<4.0",
  "markitdown>=0.1.1,<1.0",
  "openai>=1.54,<2.0",
  "pdfplumber>=0.11,<1.0",
  "pydantic>=2.8,<3.0",
  "python-multipart>=0.0.9,<1.0",
  "uvicorn>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.2,<9.0",
]
